# Python

./: README.md
c++/1sem/Seminars/Studing/EasyAlg/: CMakeLists.txt  main.cpp
c++/1sem/Seminars/Studing/alphabet/: CMakeLists.txt  main.cpp
c++/1sem/Seminars/Studing/study/: main.cpp
c++/1sem/Seminars/to11Seminar/b/: CMakeLists.txt  main.cpp
c++/1sem/Seminars/to11Seminar/sort_in_file/: main.cpp  (+1 more)
c++/1sem/Seminars/to12Seminar/: SortsComparison.numbers
c++/2sem/Seminars/seminar2/: benchmark.cpp
c++/2sem/Seminars/seminar6/: nasledovanie.cpp
c++/2sem/Seminars/seminar8/: seminar8.cpp
c++/2sem/contest/BigInteger/: CMakeLists.txt  main.cpp
c++/2sem/contest/Rational/: main.cpp
c++/2sem/contest/contest1/Rational/: CMakeLists.txt
c++/2sem/contest/contest3/shared_ptr/: CMakeLists.txt  main.cpp  shared_ptr.h
c++/2sem/contest/contest3/shared_ptr/GoogleTestDemo/: CMakeLists.txt  test.cpp
c++/2sem/exam/A/: main.cpp
c++/2sem/exam/D/: main.cpp
c++/2sem/exam/E/: CMakeLists.txt  main.cpp
c++/2sem/game_techprog/: CMakeLists.txt  destination.h  main.h
c++/2sem/game_techprog/map/: map.cpp  map.h
c++/2sem/game_techprog/unit/: unit.cpp  unit.h
c++/2sem/game_techprog/units/: unit.cpp  unit.h
python/: A.py  B.py  C.py  D.py
python/PythonCourse2020Review1/Chekers/: box.py  game0.db  game1.db  gui.py  tests.py
python/PythonCourse2020Review1/Chekers/src/: boardstate.py
python/PythonCourse2020Review1/Gomoku/: box.py  gui.py  tests.py
python/PythonCourse2020Review1/Gomoku/src/: ai.py  boardstate.py
python/PythonCourse2020Review3/: README.md  client.py
(+227 files in other folders)
